force-app/main/default/objects/Product2/fields/Account_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_SAP_Code__c</fullName>
    <label>Account SAP Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>