force-app/main/default/objects/Product2/fields/AU_Active__c.field-meta.xml
<CustomField>
    <fullName>AU_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Product is available/active for AU region.</description>
    <label>AU Active</label>
    <type>Checkbox</type>
</CustomField>