force-app/main/default/objects/Product2/fields/Box_Units__c.field-meta.xml
<CustomField>
    <fullName>Box_Units__c</fullName>
    <formula>VALUE(
  SUBSTITUTE(
    SUBSTITUTE(
      SUBSTITUTE(
        SUBSTITUTE(TEXT(UnidadeMedida__c), &quot;Box&quot;, &quot;&quot;),
        &quot;Case&quot;, &quot;&quot;),
      &quot;cs&quot;, &quot;&quot;),
    &quot;Each&quot;, &quot;1&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Box Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>