force-app/main/default/objects/Product2/fields/Branding__c.field-meta.xml
<CustomField>
    <fullName>Branding__c</fullName>
    <label>Branding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Cobrand</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Own Brand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>