force-app/main/default/objects/Product2/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <label>BU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BU01 Injection and Pharma</fullName>
            </value>
            <value>
                <fullName>BU02 Diagnostics</fullName>
            </value>
            <value>
                <fullName>BU03 Diabetes Care</fullName>
            </value>
            <value>
                <fullName>BU04 Vascular Access &amp; Infusion Therapy</fullName>
            </value>
            <value>
                <fullName>BU05 Oncology</fullName>
            </value>
            <value>
                <fullName>BU06 Injection Prevention</fullName>
            </value>
            <value>
                <fullName>BU07 Kitting</fullName>
            </value>
            <value>
                <fullName>BU08 Advanced Wound Care</fullName>
            </value>
            <value>
                <fullName>BU09 Medical Supplies</fullName>
            </value>
            <value>
                <fullName>BU10 SolCotton</fullName>
            </value>
            <value>
                <fullName>BU11 Clothing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>