force-app/main/default/objects/Product2/fields/CA_Active__c.field-meta.xml
<CustomField>
    <fullName>CA_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Product is available/active for CA region.</description>
    <label>CA Active</label>
    <type>Checkbox</type>
</CustomField>