force-app/main/default/objects/Product2/fields/Case_Units__c.field-meta.xml
<CustomField>
    <fullName>Case_Units__c</fullName>
    <formula>Qty_per_Case__c
*
 Box_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>