force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Animal Health</fullName>
            </value>
            <value>
                <fullName>Diabetes Care</fullName>
            </value>
            <value>
                <fullName>Gloves</fullName>
            </value>
            <value>
                <fullName>Hygiene Products</fullName>
            </value>
            <value>
                <fullName>Infusion</fullName>
            </value>
            <value>
                <fullName>Injection</fullName>
            </value>
            <value>
                <fullName>Lab Supplies</fullName>
            </value>
            <value>
                <fullName>Medical Electronic</fullName>
            </value>
            <value>
                <fullName>Medical Supplies</fullName>
            </value>
            <value>
                <fullName>Medical System</fullName>
            </value>
            <value>
                <fullName>Medication Preparation</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Oral, Enteral and Irrigation Administration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pharma System</fullName>
            </value>
            <value>
                <fullName>Protective Apparel</fullName>
            </value>
            <value>
                <fullName>Regional Anesthesia</fullName>
            </value>
            <value>
                <fullName>Respiratory Supplies &amp; Devices</fullName>
            </value>
            <value>
                <fullName>Sample collection</fullName>
            </value>
            <value>
                <fullName>NEW PRODUCT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>