force-app/main/default/objects/Product2/fields/CodigoSAP__c.field-meta.xml
<CustomField>
    <fullName>CodigoSAP__c</fullName>
    <externalId>true</externalId>
    <label>Código SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>