force-app/main/default/objects/Product2/fields/Cubage__c.field-meta.xml
<CustomField>
    <fullName>Cubage__c</fullName>
    <label>Cubage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>