force-app/main/default/objects/Product2/fields/EMEA_Active__c.field-meta.xml
<CustomField>
    <fullName>EMEA_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines if Product is available/active for EMEA region.</inlineHelpText>
    <label>PL Active</label>
    <type>Checkbox</type>
</CustomField>