force-app/main/default/objects/Product2/fields/EMEA_Box_Quantity__c.field-meta.xml
<CustomField>
    <fullName>EMEA_Box_Quantity__c</fullName>
    <inlineHelpText>Box Quantity for EMEA region.</inlineHelpText>
    <label>EMEA Box Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>