force-app/main/default/objects/Product2/fields/EMEA_Case_Qty__c.field-meta.xml
<CustomField>
    <fullName>EMEA_Case_Qty__c</fullName>
    <inlineHelpText>Case Quantity for EMEA region.</inlineHelpText>
    <label>EMEA Case Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>