force-app/main/default/objects/Product2/fields/ES_Active__c.field-meta.xml
<CustomField>
    <fullName>ES_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Product is available/active for ES region.</description>
    <label>ES Active</label>
    <type>Checkbox</type>
</CustomField>