force-app/main/default/objects/Product2/fields/FR_Active__c.field-meta.xml
<CustomField>
    <fullName>FR_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Product is available/active for FR region.</description>
    <label>FR Active</label>
    <type>Checkbox</type>
</CustomField>