force-app/main/default/objects/Product2/fields/GP_Threshold__c.field-meta.xml
<CustomField>
    <fullName>GP_Threshold__c</fullName>
    <label>GP % Threshold</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>