force-app/main/default/objects/Product2/fields/HK_Active__c.field-meta.xml
<CustomField>
    <fullName>HK_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Product is available/active for HK region.</description>
    <label>HK Active</label>
    <type>Checkbox</type>
</CustomField>