force-app/main/default/objects/Product2/fields/IT_Active__c.field-meta.xml
<CustomField>
    <fullName>IT_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Product is available/active for IT region</description>
    <label>IT Active</label>
    <type>Checkbox</type>
</CustomField>