force-app/main/default/objects/Product2/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finished Product</fullName>
            </value>
            <value>
                <fullName>Raw material</fullName>
            </value>
            <value>
                <fullName>Semi-finished Product</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>