force-app/main/default/objects/Product2/fields/Multiplicador__c.field-meta.xml
<CustomField>
    <fullName>Multiplicador__c</fullName>
    <label>Multiplicador</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>