force-app/main/default/objects/Product2/fields/NACA_Active__c.field-meta.xml
<CustomField>
    <fullName>NACA_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Product is available/active for NACA region.</description>
    <inlineHelpText>Determines if Product is available/active for NACA region.</inlineHelpText>
    <label>US Active</label>
    <type>Checkbox</type>
</CustomField>