force-app/main/default/objects/Product2/fields/NACA_Box_Quantity__c.field-meta.xml
<CustomField>
    <fullName>NACA_Box_Quantity__c</fullName>
    <inlineHelpText>Box Quantity for NACA region.</inlineHelpText>
    <label>NACA Box Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>