force-app/main/default/objects/Product2/fields/NACA_Case_Qty__c.field-meta.xml
<CustomField>
    <fullName>NACA_Case_Qty__c</fullName>
    <inlineHelpText>Case Quantity for NACA region.</inlineHelpText>
    <label>NACA Case Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>