force-app/main/default/objects/Product2/fields/NCMCode__c.field-meta.xml
<CustomField>
    <fullName>NCMCode__c</fullName>
    <externalId>true</externalId>
    <label>NCM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>