force-app/main/default/objects/Product2/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coupon</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>PlanOptions</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Kit</fullName>
            </value>
            <value>
                <fullName>Aggregated</fullName>
            </value>
            <value>
                <fullName>Assembly</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Configurable</fullName>
            </value>
            <value>
                <fullName>Dynamic Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>