force-app/main/default/objects/Product2/fields/Qty_Available__c.field-meta.xml
<CustomField>
    <fullName>Qty_Available__c</fullName>
    <label>Qty Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>