force-app/main/default/objects/Product2/fields/Qty_per_Case__c.field-meta.xml
<CustomField>
    <fullName>Qty_per_Case__c</fullName>
    <label>Qty per Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>