force-app/main/default/objects/Product2/fields/SA_Active__c.field-meta.xml
<CustomField>
    <fullName>SA_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SA_Active</label>
    <type>Checkbox</type>
</CustomField>