force-app/main/default/objects/Product2/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medication Delivery</fullName>
            </value>
            <value>
                <fullName>Home-Care</fullName>
            </value>
            <value>
                <fullName>Diabetes Care</fullName>
            </value>
            <value>
                <fullName>Medical Supplies</fullName>
            </value>
            <value>
                <fullName>Diagnostic</fullName>
            </value>
            <value>
                <fullName>Dyalisis and Respiratory Care</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Advanced Wound Dressing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>