force-app/main/default/objects/Product2/fields/SH_Active__c.field-meta.xml
<CustomField>
    <fullName>SH_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Product is available/active for SH region.</description>
    <label>SH Active</label>
    <type>Checkbox</type>
</CustomField>