force-app/main/default/objects/Product2/fields/ShipSeparately__c.field-meta.xml
<CustomField>
    <fullName>ShipSeparately__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not this item must be shipped separately - not currently sued within the system.</description>
    <label>Ship Separately</label>
    <type>Checkbox</type>
</CustomField>