force-app/main/default/objects/Product2/fields/SubCategory__c.field-meta.xml
<CustomField>
    <fullName>SubCategory__c</fullName>
    <label>SubCategory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alcohol swabs non-sterile</fullName>
            </value>
            <value>
                <fullName>Alcohol swabs sterile</fullName>
            </value>
            <value>
                <fullName>Alcohol wipes PE bag</fullName>
            </value>
            <value>
                <fullName>Alcohol wipes tube</fullName>
            </value>
            <value>
                <fullName>Beard Cover</fullName>
            </value>
            <value>
                <fullName>Blunt Fill Needle With Filter</fullName>
            </value>
            <value>
                <fullName>Blunt Fill Needle/Hypodermic Needle</fullName>
            </value>
            <value>
                <fullName>Boot Covers</fullName>
            </value>
            <value>
                <fullName>Child Mask</fullName>
            </value>
            <value>
                <fullName>Disposable Bouffant Cap</fullName>
            </value>
            <value>
                <fullName>Disposable Face shield</fullName>
            </value>
            <value>
                <fullName>Disposable Shoe Covers</fullName>
            </value>
            <value>
                <fullName>Disposable Surgeon Cap</fullName>
            </value>
            <value>
                <fullName>Enteral Syringe</fullName>
            </value>
            <value>
                <fullName>EZ Wing</fullName>
            </value>
            <value>
                <fullName>Face Mask</fullName>
            </value>
            <value>
                <fullName>Finger Pulse Oximeter</fullName>
            </value>
            <value>
                <fullName>Fingertip Oximeter</fullName>
            </value>
            <value>
                <fullName>Flush Syringe - Saline</fullName>
            </value>
            <value>
                <fullName>Infrared Thermometers</fullName>
            </value>
            <value>
                <fullName>Instant hand sanitizer</fullName>
            </value>
            <value>
                <fullName>Instant hand sanitizer Gel</fullName>
            </value>
            <value>
                <fullName>Isolation Gowns</fullName>
            </value>
            <value>
                <fullName>KN95 Respirator</fullName>
            </value>
            <value>
                <fullName>Lab Coat</fullName>
            </value>
            <value>
                <fullName>Luer Adapter</fullName>
            </value>
            <value>
                <fullName>N95 Respirator</fullName>
            </value>
            <value>
                <fullName>Nitrile Glove</fullName>
            </value>
            <value>
                <fullName>Non-Safety Blood Collection Holder</fullName>
            </value>
            <value>
                <fullName>Non-Safety Butterfly Needle-VET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>