force-app/main/default/objects/Product2/fields/UK_Active__c.field-meta.xml
<CustomField>
    <fullName>UK_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Product is available/active for UK region.</description>
    <label>UK Active</label>
    <type>Checkbox</type>
</CustomField>