force-app/main/default/objects/Product2/fields/UnidadeMedida__c.field-meta.xml
<CustomField>
    <fullName>UnidadeMedida__c</fullName>
    <label>Unidade de Medida</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CX</fullName>
            </value>
            <value>
                <fullName>UN</fullName>
            </value>
            <value>
                <fullName>VOL</fullName>
            </value>
            <value>
                <fullName>CASE</fullName>
            </value>
            <value>
                <fullName>bx50</fullName>
            </value>
            <value>
                <fullName>Box100</fullName>
            </value>
            <value>
                <fullName>Box50</fullName>
            </value>
            <value>
                <fullName>Box25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>