force-app/main/default/objects/Product2/fields/UoM__c.field-meta.xml
<CustomField>
    <fullName>UoM__c</fullName>
    <label>UoM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CX</fullName>
            </value>
            <value>
                <fullName>UN</fullName>
            </value>
            <value>
                <fullName>VOL</fullName>
            </value>
            <value>
                <fullName>CASE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>