force-app/main/default/objects/Product2/fields/UoM_Code__c.field-meta.xml
<CustomField>
    <fullName>UoM_Code__c</fullName>
    <label>UoM Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>