force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>SAP_Code__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>NACA_Case_Qty__c</columns>
    <columns>EMEA_Case_Qty__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Category__c</columns>
    <columns>Segment__c</columns>
    <columns>BU__c</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>