force-app/main/default/objects/Product2/listViews/SA_BR.listView-meta.xml
<ListView>
    <fullName>SA_BR</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SA_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>SA_BR</label>
</ListView>